[tool.poetry]
name = "warehouse"
version = "0.1.0"
description = ""
authors = ["Alfredo de Morais"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.2"
pre-commit = "^2.20.0"
virtualenv = "20.0.33"
setuptools = "*"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
